@@ -6,6 +6,7 @@
 * Fix ALPN agent jar not being added to boot directory in bundle zip file
 * Shutdown task is now the highest priority thread.
 * Fix AnalogChangeEventDetector to raise event every change with zero duration set, fix zero duration logged only
+* Catch nightly purge errors and log them
 
 *Version 3.3.3*
 * Fix bug where data point tags were not exported when using the search-and-export feature of the data point tables on the Data Source Edit page
